<resources>
    <string name="app_name">Higgs Shop Sample App</string>

    <!-- landing page -->
    <string name="landing_welcome">Welcome to the mParticle SDK sample app. Everything here is connected to the SDK so you can see what we can do for you!</string>
    <string name="landing_disclaimer">*This app is for demo purposes only.</string>
    <string name="landing_cta">Start Shopping*</string>
    <string name="landing_apikey_alert">You have started the app without an API key in the config. There is information in this app\'s github repo about how to add your API key.</string>

    <!-- navigation -->
    <string name="nav_shop">Shop</string>
    <string name="nav_about">About</string>
    <string name="nav_account">My Account</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_webview_bridge">WebView</string>
    <string name="nav_title">About</string>

    <!-- webview bridge -->
    <string name="webview_bridge_screen_name">WebView Bridge</string>
    <string name="webview_bridge_loading">Loading WebView…</string>
    <string name="webview_bridge_alias_native">Alias Users (Native)</string>
    <string name="webview_bridge_alias_need_two_users">Alias requires at least 2 users on device</string>

    <!-- shop -->
    <string name="shop_title">Shop Higgs</string>
    <string name="shop_product_item_id">ID</string>
    <string name="shop_product_item_label">Product Item Label</string>
    <string name="shop_product_picture">Product Picture</string>

    <!-- detail -->
    <string name="detail_back">Back</string>
    <string name="detail_header">Product Label</string>
    <string name="detail_add_to_cart">Add to cart</string>
    <string name="detail_price">$0.00</string>
    <string name="detail_cta_added">Product added to cart</string>
    <string name="detail_cta_cart">Go to cart</string>
    <string name="detail_color">Color</string>
    <string name="detail_size">Size</string>
    <string name="detail_quantity">Quantity</string>
    <string name="detail_tbd">TBD</string>

    <!-- about -->
    <string name="about_title">About</string>

    <!-- account -->
    <string name="account_title">My Account</string>
    <string name="account_user_header">User ID</string>
    <string name="account_user_value">MyHiggsId</string>
    <string name="account_user_header2">You are signed in as</string>
    <string name="account_cta_login">Sign In*</string>
    <string name="account_cta_logout">Sign Out*</string>
    <string name="account_disclaimer">*Demonstration only</string>

    <!-- cart -->
    <string name="cart_title">My Cart</string>
    <string name="cart_0">No items in cart</string>
    <string name="cart_subtotal">Subtotal</string>
    <string name="cart_subtotal_price">$0.00</string>
    <string name="cart_disclaimer">*Demonstration only</string>
    <string name="cart_cta">Checkout*</string>
    <string name="cart_sku">SKU</string>
    <string name="cart_label">Label</string>
    <string name="cart_price">$0.00</string>
    <string name="cart_quantity">Qty: 1</string>
    <string name="cart_remove">Remove</string>

    <!-- checkout -->
    <string name="checkout_back">Back to Cart</string>
    <string name="checkout_title">Checkout</string>
    <string name="checkout_header1">Shipping*</string>
    <string name="checkout_address">Address</string>
    <string name="checkout_address_value">1234 Normal Lane</string>
    <string name="checkout_city">City</string>
    <string name="checkout_city_value">Higgsville</string>
    <string name="checkout_state">State</string>
    <string name="checkout_state_value">NY</string>
    <string name="checkout_zip">Zip</string>
    <string name="checkout_zip_value">10010</string>
    <string name="checkout_header2">Payment*</string>
    <string name="checkout_creditcard">Credit Card Number</string>
    <string name="checkout_creditcard_value">0000-0000-0000</string>
    <string name="checkout_cvc">CVC</string>
    <string name="checkout_cvc_value">123</string>
    <string name="checkout_expiration">Expiration</string>
    <string name="checkout_expiration_value">03/23</string>
    <string name="checkout_header3">Review Order</string>
    <string name="checkout_subtotal_header">Subtotal</string>
    <string name="checkout_salestax_header">Sales Tax</string>
    <string name="checkout_shipping_header">Shipping</string>
    <string name="checkout_grand_header">Grand Total</string>
    <string name="checkout_price_0">$0.00</string>
    <string name="checkout_disclaimer">*Demonstration only</string>
    <string name="checkout_cta">Place Order*</string>
    <string name="checkout_sku">SKU</string>
    <string name="checkout_label">Label</string>
    <string name="checkout_quantity">Qty: 1</string>
    <string name="checkout_thanks">Thank you for your purchase</string>

</resources>