<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/black"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/checkout_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/checkout_header1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/checkout_disclaimer"
            android:textColor="@color/gray_999999"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="325dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:hint="@string/checkout_address"
            style="@style/Theme.mParticle.SampleApp.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.mParticle.SampleApp.TextInputEditText"
                android:textIsSelectable="false"
                android:enabled="false"
                android:text="@string/checkout_address_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="325dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:hint="@string/checkout_city"
            android:textSize="16sp"
            style="@style/Theme.mParticle.SampleApp.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.mParticle.SampleApp.TextInputEditText"
                android:textIsSelectable="false"
                android:enabled="false"
                android:text="@string/checkout_city_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="153dp"
                android:layout_height="54dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/checkout_state"
                style="@style/Theme.mParticle.SampleApp.TextInputLayout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.mParticle.SampleApp.TextInputEditText"
                    android:textIsSelectable="false"
                    android:enabled="false"
                    android:text="@string/checkout_state_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="153dp"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:hint="@string/checkout_zip"
                android:textSize="16sp"
                style="@style/Theme.mParticle.SampleApp.TextInputLayout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.mParticle.SampleApp.TextInputEditText"
                    android:textIsSelectable="false"
                    android:enabled="false"
                    android:text="@string/checkout_zip_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/checkout_header2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/checkout_disclaimer"
            android:textColor="@color/gray_999999"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="325dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:hint="@string/checkout_creditcard"
            android:textSize="16sp"
            style="@style/Theme.mParticle.SampleApp.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.mParticle.SampleApp.TextInputEditText"
                android:textIsSelectable="false"
                android:enabled="false"
                android:text="@string/checkout_creditcard_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                app:endIconTint="@color/white"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_arrow_drop_down_24"
                android:layout_gravity="center_horizontal"
                android:layout_width="153dp"
                android:layout_height="54dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/checkout_expiration"
                style="@style/Theme.mParticle.SampleApp.TextInputLayout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.mParticle.SampleApp.TextInputEditText"
                    android:textIsSelectable="false"
                    android:enabled="false"
                    android:text="@string/checkout_expiration_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="153dp"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:hint="@string/checkout_cvc"
                android:textSize="16sp"
                style="@style/Theme.mParticle.SampleApp.TextInputLayout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Theme.mParticle.SampleApp.TextInputEditText"
                    android:textIsSelectable="false"
                    android:enabled="false"
                    android:text="@string/checkout_cvc_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/checkout_header3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_list"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_width="329dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="344dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/checkout_subtotal_header"
                style="@style/Theme.mParticle.SampleApp.Checkout.TextView"
                />
            <TextView
                android:id="@+id/tv_payment_subtotal_price"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/checkout_price_0"
                style="@style/Theme.mParticle.SampleApp.Checkout.TextView" />
        </LinearLayout>
        <View
            android:layout_gravity="center_horizontal"
            android:layout_width="328dp"
            android:layout_height="1dp"
            style="@style/Theme.mParticle.SampleApp.Checkout.Line"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="344dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:text="@string/checkout_salestax_header"
                style="@style/Theme.mParticle.SampleApp.Checkout.TextView" />
            <TextView
                android:id="@+id/tv_payment_tax_price"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/checkout_price_0"
                style="@style/Theme.mParticle.SampleApp.Checkout.TextView" />
        </LinearLayout>
        <View
            android:layout_gravity="center_horizontal"
            android:layout_width="328dp"
            android:layout_height="1dp"
            style="@style/Theme.mParticle.SampleApp.Checkout.Line"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="344dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:text="@string/checkout_shipping_header"
                style="@style/Theme.mParticle.SampleApp.Checkout.TextView" />
            <TextView
                android:id="@+id/tv_payment_shipping_price"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/checkout_price_0"
                style="@style/Theme.mParticle.SampleApp.Checkout.TextView" />
        </LinearLayout>
        <View
            android:layout_gravity="center_horizontal"
            android:layout_width="328dp"
            android:layout_height="1dp"
            style="@style/Theme.mParticle.SampleApp.Checkout.Line"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="344dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:text="@string/checkout_grand_header"
                style="@style/Theme.mParticle.SampleApp.Checkout.TextView" />
            <TextView
                android:id="@+id/tv_payment_grand_price"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/checkout_price_0"
                style="@style/Theme.mParticle.SampleApp.Checkout.TextView" />
        </LinearLayout>
        <View
            android:layout_gravity="center_horizontal"
            android:layout_width="328dp"
            android:layout_height="1dp"
            style="@style/Theme.mParticle.SampleApp.Checkout.Line"
            />
        <Button
            android:id="@+id/payment_cta"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/cart_cta"
            android:theme="@style/Theme.mParticle.SampleApp.Button" />
        <TextView
            android:id="@+id/tv_cart_disclaimer"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:text="@string/cart_disclaimer"
            android:textColor="@color/white"
            app:fontFamily="sans-serif"
            android:alpha=".6"
            android:gravity="center"
            android:layout_marginBottom="100dp"
            />
    </LinearLayout>
</ScrollView>