<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@color/black"
    android:layout_width="344dp"
    android:layout_height="88dp">
    <ImageView
        android:src="@drawable/product_image_placeholder"
        android:id="@+id/iv_cart_item_picture"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:contentDescription="@string/shop_product_picture" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_cart_item_sku"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/cart_sku"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/tv_cart_item_label"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/cart_label"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:maxLines="1"
                />
            <TextView
                android:id="@+id/tv_cart_item_price"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/cart_price"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_cart_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/cart_quantity"
            android:textSize="14sp"
            android:textColor="@color/gray_999999" />
        <TextView
            android:id="@+id/tv_cart_item_remove"
            android:textColor="@color/blue_4079FE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cart_remove"
            android:textSize="14sp"
            />
        <View
            android:id="@+id/divider"
            android:layout_gravity="center_horizontal"
            android:layout_width="144dp"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            />
    </LinearLayout>
</LinearLayout>
