<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_cart_header"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart_list"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_width="329dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="344dp"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/tv_cart_subtotal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/cart_subtotal"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:maxLines="1"
            />
        <TextView
            android:id="@+id/tv_cart_subtotal_price"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/cart_subtotal_price"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"/>
    </LinearLayout>
    <View
        android:id="@+id/divider"
        android:layout_gravity="center_horizontal"
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        />
    <Button
        android:id="@+id/cart_cta"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/cart_cta"
        android:theme="@style/Theme.mParticle.SampleApp.Button" />
    <TextView
        android:id="@+id/tv_cart_disclaimer"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:text="@string/cart_disclaimer"
        android:textColor="@color/white"
        app:fontFamily="sans-serif"
        android:alpha=".6"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        />
</LinearLayout>