<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingTop="10dp"
    android:layout_width="344dp"
    android:layout_height="88dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:src="@drawable/product_image_placeholder"
            android:id="@+id/iv_checkout_item_picture"
            android:layout_gravity="center_vertical"
            android:layout_width="100dp"
            android:layout_height="56dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:contentDescription="@string/shop_product_picture" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_checkout_item_label"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/cart_label"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:ellipsize="end"
                    android:maxLines="1"
                    />
                <TextView
                    android:id="@+id/tv_checkout_item_price"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:text="@string/cart_price"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_checkout_item_line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/cart_quantity"
                android:textSize="14sp"
                android:textColor="@color/gray_999999" />
            <TextView
                android:id="@+id/tv_checkout_item_line2"
                android:textColor="@color/gray_999999"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cart_remove"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="end"
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="16dp">
        <View
            android:id="@+id/product_item_divider"
            android:layout_width="230dp"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            style="@style/Theme.mParticle.SampleApp.Checkout.ShortLine"
            />
    </LinearLayout>
</LinearLayout>
