<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.mParticle.SampleApp"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_account_header"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/account_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        />
    <EditText
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:paddingStart="10dp"
        android:text="@string/account_username"
        android:textColor="@color/black"
        android:background="@color/white"
        />
    <Button
        android:id="@+id/account_cta"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/account_cta_login"
        android:theme="@style/Theme.mParticle.SampleApp.Button" />
    <TextView
        android:id="@+id/tv_account_disclaimer"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:text="@string/account_disclaimer"
        android:textColor="@color/white"
        app:fontFamily="sans-serif"
        android:alpha=".6"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        />
</LinearLayout>